1. updated favicon and name 2. updated readme 3. updated default code snippet

--- a/src/styles/tailwind.output.css
+++ b/src/styles/tailwind.output.css
@@ -575,6 +575,10 @@ video {
   height: 100%;
 }
 
+.h-screen {
+  height: 100vh;
+}
+
 .w-\[30\%\] {
   width: 30%;
 }
@@ -657,9 +661,9 @@ video {
   background-color: rgb(30 41 59 / var(--tw-bg-opacity));
 }
 
-.bg-blue-500 {
+.bg-blue-400 {
   --tw-bg-opacity: 1;
-  background-color: rgb(59 130 246 / var(--tw-bg-opacity));
+  background-color: rgb(96 165 250 / var(--tw-bg-opacity));
 }
 
 .bg-gray-100 {
@@ -799,9 +803,9 @@ video {
   transition-duration: 200ms;
 }
 
-.hover\:bg-blue-500:hover {
+.hover\:bg-blue-400:hover {
   --tw-bg-opacity: 1;
-  background-color: rgb(59 130 246 / var(--tw-bg-opacity));
+  background-color: rgb(96 165 250 / var(--tw-bg-opacity));
 }
 
 .hover\:text-white:hover {
